fix spacing in hero

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav{
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: .5fr 1fr .8fr;
         width: max(425px, 80%);
-        gap: 20px;
+        gap: 40px;
         justify-items: center;
         margin: 0 auto;
     }
